# knot-resolver

modules/: meson.build
modules/testmodule/: meson.build  testmodule.c
